--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "i": "^0.3.7",
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
